--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-hbs": "^2.2.0",
